update: ajustes no build do projeto - testes unitários